# 2018-02-07

* Support docinfo in ReST
* Skip if filename start with `draft-`
* Delete entry in indexes if not exist.

# 2018-02-21

* .accs_index.rbm is added index file list.
* Support Array metadata.